@@ -23,7 +23,6 @@ import com.google.gson.Gson;
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.sonarsource.sonarlint.core.commons.log.SonarLintLogger;
 import org.sonarsource.sonarlint.core.commons.progress.SonarLintCancelMonitor;
 import org.sonarsource.sonarlint.core.serverapi.ServerApiHelper;
@@ -42,7 +41,7 @@ public class PluginsApi {
       () -> helper.get("/api/plugins/installed", cancelMonitor),
       response -> {
         var plugins = new Gson().fromJson(response.bodyAsString(), InstalledPluginsPayload.class);
-        return Arrays.stream(plugins.plugins).map(PluginsApi::toInstalledPlugin).collect(Collectors.toList());
+        return Arrays.stream(plugins.plugins).map(PluginsApi::toInstalledPlugin).toList();
       },
       duration -> LOG.info("Downloaded plugin list in {}ms", duration));
   }
