@@ -29,7 +29,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.sonarsource.sonarlint.core.commons.CleanCodeAttribute;
 import org.sonarsource.sonarlint.core.commons.ImpactSeverity;
 import org.sonarsource.sonarlint.core.commons.IssueSeverity;
@@ -44,7 +43,6 @@ import org.sonarsource.sonarlint.core.serverapi.proto.sonarqube.ws.Rules;
 import org.sonarsource.sonarlint.core.serverapi.push.parsing.common.ImpactPayload;
 
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
 public class RulesApi {
@@ -97,7 +95,7 @@ public class RulesApi {
             context = new ServerRule.DescriptionSection.Context(contextFromServer.getKey(), contextFromServer.getDisplayName());
           }
           return new ServerRule.DescriptionSection(s.getKey(), s.getContent(), Optional.ofNullable(context));
-        }).collect(toList());
+        }).toList();
     }
     return Collections.emptyList();
   }
@@ -124,7 +122,7 @@ public class RulesApi {
           ruleTemplatesByRuleKey.get(ruleKey),
           ar.getImpacts().getImpactsList().stream()
             .map(impact -> new ImpactPayload(impact.getSoftwareQuality().toString(), ImpactSeverity.mapSeverity(impact.getSeverity().name()).name()))
-            .collect(Collectors.toList())));
+            .toList()));
 
       },
       false,
@@ -143,7 +141,7 @@ public class RulesApi {
 
   public Set<String> getAllTaintRules(List<SonarLanguage> enabledLanguages, SonarLintCancelMonitor cancelMonitor) {
     Set<String> taintRules = new HashSet<>();
-    serverApiHelper.getPaginated(getSearchByRepoUrl(enabledLanguages.stream().map(TAINT_REPOS_BY_LANGUAGE::get).filter(Objects::nonNull).collect(toList())),
+    serverApiHelper.getPaginated(getSearchByRepoUrl(enabledLanguages.stream().map(TAINT_REPOS_BY_LANGUAGE::get).filter(Objects::nonNull).toList()),
       Rules.SearchResponse::parseFrom,
       Rules.SearchResponse::getTotal,
       Rules.SearchResponse::getRulesList,
